Added identityservice obserable and user population on load. Sidebar component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         name="Oppdrag" icon="view_list" [routerLink]="['/oppdrag']">
     </app-nav-list-item>
     <app-nav-list-item
-      name="Oppdragsgivere" icon="account_box" [routerLink]="['/oppdragsgivere']">
+      name="Oppdragsgivere" icon="work" [routerLink]="['/oppdragsgivere']">
     </app-nav-list-item>
     <app-nav-list-item
     name="Brukere" icon="people" [routerLink]="['/brukere']">
