--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -6,6 +6,9 @@
 
 <mat-form-field>
   <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
+  <mat-error *ngIf="this.password.invalid">
+    Passord må være på minst 7 tegn.
+  </mat-error>
 </mat-form-field>
 
 <mat-form-field>
