--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,12 @@ body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:h
 .snackbar_margin{
   margin-bottom:62px!important;
 }
+
+.overlay{
+  position:fixed;
+  top:0;
+  height:100vh;
+  width:100vw;
+  background:rgba(0, 0, 0, .4);
+  z-index:100;
+}
