--- a/src/app/shared/layout/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/layout/bottom-nav/bottom-nav.component.html
@@ -1,29 +1,30 @@
 <mat-toolbar color="accent" class="bottom_toolbar p-0" [ngClass]="(isHandset$ | async) ? '' : 'bottom_toolbar_no_side'">
 
+        <button [routerLink]="['/hjem']" [routerLinkActive]="['activeIcon']"
+        class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
+
+          <mat-icon class="bottom_toolbar_icon">home</mat-icon>
+
+        </button>
+
         <button [routerLink]="['/oppdrag']" [routerLinkActive]="['activeIcon']"
           class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
-          <mat-icon class="bottom_toolbar_icon">home_work</mat-icon>
+          <mat-icon class="bottom_toolbar_icon">view_list</mat-icon>
 
         </button>
 
-        <button [routerLink]="['/oppdragsgivere']" [routerLinkActive]="['activeIcon']"
+        <button *ifRole="[ROLES.Ansatt, ROLES.Mellomleder]" [routerLink]="['/oppdragsgivere']" [routerLinkActive]="['activeIcon']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
-            <mat-icon class="bottom_toolbar_icon">work</mat-icon>
+            <mat-icon class="bottom_toolbar_icon">hourglass_full</mat-icon>
 
         </button>
 
-        <button [routerLink]="['/brukere']" [routerLinkActive]="['activeIcon']"
+        <button *ifRole="ROLES.Leder" [routerLink]="['/brukere']" [routerLinkActive]="['activeIcon']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
             <mat-icon class="bottom_toolbar_icon">people</mat-icon>
 
         </button>
-        <button [routerLink]="['/brukere']" [routerLinkActive]="['activeIcon']"
-        class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
-
-        <mat-icon class="bottom_toolbar_icon">people</mat-icon>
-
-    </button>
 </mat-toolbar>
