--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -5,7 +5,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false">
 
-    <mat-toolbar color="accent" style="height:72px">Meny</mat-toolbar>
+    <app-side-nav-header></app-side-nav-header>
 
     <mat-nav-list>
       <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/hjem']" [routerLinkActive]="['active']">Hjem</a>
