--- a/src/app/shared/layout/nested-nav/nested-nav.component.html
+++ b/src/app/shared/layout/nested-nav/nested-nav.component.html
@@ -5,7 +5,11 @@
   [mode]="(isHandset$ | async) ? 'over' : 'side'"
   [opened]="(isHandset$ | async) === false">
 
-    <mat-toolbar color="accent" style="height:72px">Meny</mat-toolbar>
+    <mat-toolbar color="accent" style="height:72px">
+
+      Meny
+
+    </mat-toolbar>
 
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/hjem']" [routerLinkActive]="['active']">Hjem</a>
