added subjects for state managment & cleaned up

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,7 +25,7 @@
           </button>
 
           <mat-error *ngIf="error" class="mt-4">
-            {{ error.message }}
+            {{ error }}
           </mat-error>
 
         </form>
