--- a/src/app/mission/components/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.html
@@ -1,27 +1,27 @@
 <mat-tab-group mat-stretch-tabs color="primary" backgroundColor="accent" class="mission_tab">
 
   <mat-tab label="Generelt">
-      <mat-nav-list class="p-0" *ngIf="mission">
+      <mat-nav-list class="p-0" *ngIf="missionDetails">
 
           <mat-list-item>
             <mat-icon mat-list-icon>phone</mat-icon>
-            <a mat-line href="tel:{{ mission.phoneNumber }}">{{ mission.phoneNumber || 'N/A' }}</a>
+            <a mat-line href="tel:{{ missionDetails.mission.phoneNumber }}">{{ missionDetails.mission.phoneNumber || 'N/A' }}</a>
             <p mat-line>Trykk for å ringe </p>
             <mat-icon>open_in_new</mat-icon>
             <mat-divider></mat-divider>
           </mat-list-item>
 
-          <mat-list-item>
+          <mat-list-item *ngIf="missionDetails.mission.address">
             <mat-icon mat-list-icon>directions_car</mat-icon>
-            <a mat-line href="https://www.google.com/maps/dir/?api=1&destination={{ mission.address }}&travelmode=driving" target="_blank">Veibeskrivelse</a>
+            <a mat-line href="https://www.google.com/maps/dir/?api=1&destination={{ missionDetails.mission.address }}&travelmode=driving" target="_blank">Veibeskrivelse</a>
             <p mat-line>Trykk for å åpne kart</p>
             <mat-icon >open_in_new</mat-icon>
             <mat-divider></mat-divider>
           </mat-list-item>
 
-          <mat-list-item *ngFor="let report of mission.missionReports">
+          <mat-list-item *ngFor="let report of missionDetails.missionReports">
             <mat-icon mat-list-icon>description</mat-icon>
-          <a mat-line href="{{ report.fileURL }}">{{ report.missionReportTypeName }}</a>
+          <a mat-line href="{{ report.fileURL }}">{{ report.missionReportType.name }}</a>
             <p mat-line>{{ report.createdAt | date }}</p>
             <mat-icon>cloud_download</mat-icon>
             <mat-divider></mat-divider>
@@ -30,19 +30,19 @@
       </mat-nav-list>
   </mat-tab>
 
-  <mat-tab label="Bilder"  *ngIf="mission">
+  <mat-tab label="Bilder"  *ngIf="missionDetails">
 
-    <app-image-list [images]="mission.missionImages" (imageDeleted)="this.imageDeleted.emit($event)" ></app-image-list>
+    <app-image-list [images]="missionDetails.missionImages" (imageDeleted)="this.imageDeleted.emit($event)" ></app-image-list>
 
   </mat-tab>
 
   <mat-tab label="Notater">
-      <mat-nav-list class="p-0" *ngIf="mission">
+      <mat-nav-list class="p-0" *ngIf="missionDetails">
           <app-nav-list-item *ngFor="let note of pinnedNotes(true)"
-            name="{{ note.title || (note.createdAt | date: 'short')}}" icon="star" [routerLink]="['/oppdrag', mission.id, 'notater', note.id]">
+            name="{{ note.title || (note.createdAt | date: 'short')}}" icon="star" [routerLink]="['/oppdrag', missionDetails.mission.id, 'notater', note.id]">
           </app-nav-list-item>
           <app-nav-list-item *ngFor="let note of pinnedNotes(false)"
-          name="{{ note.title || (note.createdAt | date: 'short')}}" icon="note" [routerLink]="['/oppdrag', mission.id, 'notater', note.id]">
+          name="{{ note.title || (note.createdAt | date: 'short')}}" icon="note" [routerLink]="['/oppdrag', missionDetails.mission.id, 'notater', note.id]">
         </app-nav-list-item>
       </mat-nav-list>
   </mat-tab>
