--- a/src/app/shared/components/image-list/image-list.component.html
+++ b/src/app/shared/components/image-list/image-list.component.html
@@ -1,6 +1,6 @@
 <div class="img-row">
     <div class="img-column">
-        <img  *ngFor="let image of images | arrayslice: '1':'4';let i = index;trackBy: trackById"
+        <img  *ngFor="let image of images | arrayslice: 1:4;let i = index;trackBy: trackById"
         (click)="openImageViewer(image.id)"
         src="{{ image.fileURL | thumbnail }}"
         (error)="unloadedThumbnail($event.path[0])"
@@ -8,7 +8,7 @@
         />
     </div>
     <div class="img-column">
-        <img  *ngFor="let image of images | arrayslice: '2':'4';let i = index;trackBy: trackById"
+        <img  *ngFor="let image of images | arrayslice: 2:4;let i = index;trackBy: trackById"
         (click)="openImageViewer(image.id)"
         src="{{ image.fileURL | thumbnail }}"
         (error)="unloadedThumbnail($event.path[0])"
@@ -16,7 +16,7 @@
         />
     </div>
     <div class="img-column">
-        <img  *ngFor="let image of images | arrayslice: '3':'4';let i = index;trackBy: trackById"
+        <img  *ngFor="let image of images | arrayslice: 3:4;let i = index;trackBy: trackById"
         (click)="openImageViewer(image.id)"
         src="{{ image.fileURL | thumbnail }}"
         (error)="unloadedThumbnail($event.path[0])"
@@ -24,7 +24,7 @@
         />
     </div>
     <div class="img-column">
-        <img  *ngFor="let image of images | arrayslice: '4':'4';let i = index;trackBy: trackById"
+        <img  *ngFor="let image of images | arrayslice: 4:4;let i = index;trackBy: trackById"
         (click)="openImageViewer(image.id)"
         src="{{ image.fileURL | thumbnail }}"
         (error)="unloadedThumbnail($event.path[0])"
