--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="authForm" (ngSubmit)="submitForm()" class="auth-form">
           <img src="assets/android-chrome-144x144.png" class="m-4" style="width:120px;height:120px" />
 
-          <fieldset [disabled]="isSubmitting">
+          <fieldset>
             <mat-form-field>
               <mat-icon matSuffix color="primary">person</mat-icon>
               <input matInput
@@ -23,10 +23,6 @@
             <mat-icon>lock_open</mat-icon>
             Logg inn
           </button>
-
-          <mat-error *ngIf="error" class="mt-4">
-            {{ error }}
-          </mat-error>
 
         </form>
 
