--- a/src/app/mission/components/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/components/mission-details-view/mission-details-view.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-stretch-tabs class="mission_tab">
+<mat-tab-group mat-stretch-tabs>
 
   <mat-tab label="Generelt">
     <div class="card-container">
