--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,4 +1,4 @@
-<span class="content-container-title">Endre passord</span>
+<span class="content-header">Endre passord</span>
 <form *ngIf="passwordForm" [formGroup]="passwordForm" class="app-form" fxLayout="column">
 
 <mat-form-field>
