--- a/src/app/shared/components/nav-list-item/nav-list-item.component.html
+++ b/src/app/shared/components/nav-list-item/nav-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-list-item *ngIf="config" class="bg-2 p-0">
+<mat-list-item *ngIf="config" class="p-0">
 
     <mat-icon *ngIf="config.startIcon" mat-list-icon>{{ config.startIcon }}</mat-icon>
 
