--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar style="font-size:1rem;position:absolute;bottom:0"  fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
+<div class="content-header" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="8px">
 
     <button (click)="previousPage()" mat-icon-button aria-label="Forrige side">
             <mat-icon class="icon_150">chevron_left</mat-icon>
@@ -7,7 +7,7 @@
     <span>{{ paginationInfo.actualPage + 1 }} av {{ paginationInfo.totalPages }} sider</span>
 
     <button (click)="nextPage()" mat-icon-button aria-label="Neste side">
-            <mat-icon class="icon_150">chevron_right</mat-icon>
+            <mat-icon class="icon_150" >chevron_right</mat-icon>
     </button>
 
-</mat-toolbar>
+</div>
