--- a/src/app/employer/employer-list/employer-list.component.html
+++ b/src/app/employer/employer-list/employer-list.component.html
@@ -1,25 +1,32 @@
 <app-main-nav>
-  <div class="content-container" fxLayout="column">
 
-    <div fxFlex="10" fxLayout="row" fxLayoutAlign="space-between center" >
-      <span class="content-container-title">Oppdragsgivere</span>
-      <button (click)="openCreateDialog()" color="primary" *ifRole="[ROLES.Leder, ROLES.Mellomleder]"
-        mat-icon-button aria-label="ny">
-        <mat-icon class="icon_125">add</mat-icon>
-      </button>
+  <div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
+
+    <div  fxFlex="10" class="content-header">
+      <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
+        <span>Oppdragsgivere</span>
+        <button (click)="openCreateDialog()" color="primary" *ifRole="[ROLES.Leder, ROLES.Mellomleder]"
+          mat-icon-button aria-label="ny">
+          <mat-icon class="icon_125">add</mat-icon>
+        </button>
+      </div>
     </div>
+
     <mat-divider></mat-divider>
 
-    <mat-nav-list *ngIf="employers" class="content-child-container" fxFlex="90">
-      <app-nav-list-item *ngFor="let employer of employers; last as last"
-        (click)="(currentUser.role == ROLES.Leder) ? openEditDialog(employer) : ''" [last]="last"
-        [config]="{mainLine: employer.name, startIcon: 'work', endIcon: (currentUser.role == ROLES.Leder) ? 'edit' : '', subLines: [
-          {name: employer.phoneNumber || 'Ingen kontaktnummer', icon: 'phone'},
-          {name: employer.address || 'Ingen addresse', icon: 'home'}
-        ]}">
-      </app-nav-list-item>
-    </mat-nav-list>
-    <mat-divider></mat-divider>
+    <div class="static-page-content" fxFlex="90">
+      <p *ngIf="!employers"><em>Laster inn oppdragsgivere...</em></p>
+      <mat-nav-list *ngIf="employers">
+        <app-nav-list-item *ngFor="let employer of employers; last as last"
+          (click)="(currentUser.role == ROLES.Leder) ? openEditDialog(employer) : ''" [last]="last"
+          [config]="{mainLine: employer.name, startIcon: 'work', endIcon: (currentUser.role == ROLES.Leder) ? 'edit' : '', subLines: [
+            {name: employer.phoneNumber || 'Ingen kontaktnummer', icon: 'phone'},
+            {name: employer.address || 'Ingen addresse', icon: 'home'}
+          ]}">
+        </app-nav-list-item>
+      </mat-nav-list>
+    </div>
+
   </div>
 
 </app-main-nav>
