--- a/src/app/mission/components/mission-form-view/mission-form-view.component.html
+++ b/src/app/mission/components/mission-form-view/mission-form-view.component.html
@@ -1,6 +1,5 @@
 
-    <form *ngIf="missionForm" [formGroup]="missionForm" class="app-dialog" fxLayout="column">
-      <span class="form-title text-center mb-2">{{ title }}</span>
+    <form *ngIf="missionForm" [formGroup]="missionForm" class="form-container" fxLayout="column">
       <mat-form-field>
           <input ngx-google-places-autocomplete [options]='googleOptions' #placesRef="ngx-places" (onAddressChange)="handleAddressChange($event)"
            matInput placeholder="Addresse" formControlName="address" required>
@@ -41,7 +40,7 @@
         <mat-form-field formGroupName="missionType">
           <input matInput placeholder="Oppdragstype" aria-label="Oppdragstype" formControlName="name" [matAutocomplete]="auto2">
           <mat-autocomplete #auto2="matAutocomplete">
-            <mat-option *ngFor="let type of types" [value]="type.name">
+            <mat-option *ngFor="let type of missionTypes" [value]="type.name">
               {{type.name}}
             </mat-option>
           </mat-autocomplete>
