--- a/src/app/profile/profile-form/profile-form.component.html
+++ b/src/app/profile/profile-form/profile-form.component.html
@@ -1,4 +1,4 @@
-<span class="content-container-title">Endre profil</span>
+<span class="content-header">Endre profil</span>
 <form *ngIf="profileForm && user" [formGroup]="profileForm" class="app-form" fxLayout="column" >
     <mat-form-field>
       <input matInput placeholder="Brukernavn" formControlName="userName" >
