--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,6 +1,6 @@
 
 <app-main-nav>
-  <mat-tab-group mat-stretch-tabs class="mission_tab">
+  <mat-tab-group mat-stretch-tabs>
 
     <mat-tab label="Generelt">
       <div class="card-container">
