--- a/src/app/shared/components/vert-menu/vert-menu.component.html
+++ b/src/app/shared/components/vert-menu/vert-menu.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Mer">
     <mat-icon>more_vert</mat-icon>
   </button>
-  <mat-menu #menu="matMenu" class="bg-5">
+  <mat-menu #menu="matMenu">
     <ng-container *ngFor="let action of actions">
       <button *ifRole="action.roles" mat-menu-item (click)="handleEvent(action.event)">
         <mat-icon>{{ action.icon }}</mat-icon>
