--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,28 +1,35 @@
 <app-main-nav>
 
-  <div class="content-container" fxLayout="column">
+  <div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
 
-    <div fxFlex="10" fxLayout="row" fxLayoutAlign="space-between center" >
-      <span class="content-container-title">Brukere</span>
-      <button (click)="openCreateDialog()" color="primary" *ifRole="[ROLES.Leder]"
-        mat-icon-button aria-label="ny">
-        <mat-icon class="icon_125">person_add</mat-icon>
-      </button>
+    <div  fxFlex="10" class="content-header">
+      <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
+        <span>Brukere</span>
+        <button (click)="openCreateDialog()" color="primary" *ifRole="[ROLES.Leder]"
+          mat-icon-button aria-label="ny">
+          <mat-icon class="icon_125">person_add</mat-icon>
+        </button>
+      </div>
     </div>
+
     <mat-divider></mat-divider>
-    <mat-nav-list *ngIf="users" class="p-0 content-child-container" fxFlex="90">
-      <app-nav-list-item
-        *ngFor="let user of users; last as last" [last]="last"
-        (click)="(currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? openEditDialog(user) : ''"
-        [config]="{
-          mainLine: (user.firstName + ' ' + user.lastName),
-          startIcon: 'person',
-          endIcon: (currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? 'edit' : '',
-          subLines: [{name: user.phoneNumber || 'Ingen kontaktnummer', icon: 'phone'}]
-        }">
-      </app-nav-list-item>
-    </mat-nav-list>
-    <mat-divider></mat-divider>
+
+    <div class="static-page-content" fxFlex="90">
+      <p *ngIf="!users"><em>Laster inn brukere...</em></p>
+      <mat-nav-list *ngIf="users" class="p-0">
+        <app-nav-list-item
+          *ngFor="let user of users; last as last" [last]="last"
+          (click)="(currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? openEditDialog(user) : ''"
+          [config]="{
+            mainLine: (user.firstName + ' ' + user.lastName),
+            startIcon: 'person',
+            endIcon: (currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? 'edit' : '',
+            subLines: [{name: user.phoneNumber || 'Ingen kontaktnummer', icon: 'phone'}]
+          }">
+        </app-nav-list-item>
+      </mat-nav-list>
+    </div>
+
   </div>
 
 </app-main-nav>
