--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,88 +2,47 @@
 @import './variables';
 
 html, body { height: 100%;}
-body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:hidden;}
-
-.item-margin{
-  margin:$item-margin * 1px !important;
-}
-.item{
-  width:$item-width!important;
-}
-
-.content-container{
-  width:$item-width!important;
-  margin:$item-margin  * 1px !important;
-  padding:$item-margin  * 1px !important;
-  background-color:mat-color($background,"app-bar")!important;
-  position: sticky;
-  z-index:80;
-  height:$content-container-height!important;
-  max-height:650px!important;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   overflow:hidden;
-
-}
-
-.custom-container{
-  width:$item-width!important;
-  margin-left:$item-margin  * 1px !important;
-  margin-top:$item-margin  * 1px !important;
-  margin-bottom:$item-margin  * 1px !important;
-  padding:$item-margin  * 1px !important;
-  background-color:mat-color($background,"app-bar")!important;
-  position: sticky;
-  z-index:80;
-  max-height:650px!important;
-  overflow:hidden;
-
-}
-.basic-container{
-  width:$item-width!important;
-  margin-left:$item-margin  * 1px !important;
-  margin-top:$item-margin  * 1px !important;
-  margin-bottom:$item-margin  * 1px !important;
-  padding:$item-margin  * 1px !important;
-  background-color:mat-color($background,"app-bar")!important;
-}
+  background-color:$bg-content!important;}
 
 .image-container{
-  margin-top:($item-margin + $tab-header-height) * 1px !important;
+  margin-top:($content-margin + $tab-header-height) * 1px !important;
 }
 
 .card-container{
-  width:$item-width!important;
-  margin-left:$item-margin  * 1px !important;
-  margin-top:($item-margin + $tab-header-height) * 1px !important;
-  margin-bottom:$item-margin  * 1px !important;
-  padding:$item-margin  * 1px !important;
+  width:$content-width!important;
+  margin-left:$content-margin  * 1px !important;
+  margin-top:($content-margin + $tab-header-height) * 1px !important;
+  margin-bottom:$content-margin  * 1px !important;
+  padding:$content-margin  * 1px !important;
   background-color:mat-color($background,"app-bar")!important;
 }
 
-.content-child-container{
-  position: sticky;
-  z-index:70;
-  overflow:auto;
-}
-
 .mat-tab-header{
+  background-color:$bg-app-bar;
   position:fixed!important;
   width:100vw;
   left:0;
   z-index:90;
 }
 
-.content-container-title{ color: rgb(255, 255,255,0.7); font-weight: 500; font-size: 14px; margin-left:16px; }
 .form-title{ color: rgb(255, 255,255,1); font-weight: 500; font-size: 20px; }
+
 .active{
-  background-color:mat-color($background,"card")!important;
   color: $primary !important;
 }
-.activeIcon{
+
+.active-icon{
   color: $primary !important;
 }
+
 .p-0{
   padding:0 !important;
 }
+
 .hide{
   display:none;
 }
@@ -95,17 +54,15 @@ body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:h
   color:mat-color($foreground, "base");
   height:auto;
 }
+
 .app-dialog{
-  padding:$item-margin  * 2px !important;;
+  padding:$content-margin  * 2px !important;;
   background-color:mat-color($background,"unselected-chip");
   color:mat-color($foreground, "base");
   height:auto;
 }
 
-.nav_button{
-  height:72px !important;
-  width:72px !important;
-}
+
 
 .action_fab{
   position:fixed!important;
@@ -178,20 +135,25 @@ body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:h
   color:mat-color($foreground, "base");
 }
 
-.bg-1{
+.bg-0{
   background-color:mat-color($background,"status-bar");
   color:mat-color($foreground, "base");
 }
-.bg-2{
+
+.bg-1{
   background-color:mat-color($background,"app-bar");
   color:mat-color($foreground, "base");
 }
-.bg-3{
+.bg-2{
   background-color:mat-color($background,"background");
   color:mat-color($foreground, "base");
 }
-.bg-4{
+.bg-3{
   background-color:mat-color($background,"card");
+  color:mat-color($foreground, "base");
+}
+.bg-4{
+  background-color:mat-color($background,"unselected-chip");
   color:mat-color($foreground, "base");
 }
 .bg-5{
@@ -199,15 +161,14 @@ body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:h
   color:mat-color($foreground, "base");
 }
 
+
 .bg-warn{
   background-color:$warn;
 }
 .color-warn{
   color:$warn;
 }
-.mat-tab-header{
-  background-color:mat-color($background,"card");
-}
+
 
 .color-primary{
   color:$primary!important;
@@ -222,3 +183,37 @@ body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow:h
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.static-page-container{
+  @include full-page-container;
+}
+
+.static-page-content{
+  overflow:auto;
+}
+
+.content-header{
+  @include small-header;
+  color: rgb(255, 255,255,0.7);
+  margin-left:$content-margin * 2px;
+  margin-right:$content-margin * 1px;
+}
+
+.content-container{
+  @include content-container;
+}
+
+.form-container{
+  @include content-container;
+  padding: $content-margin * 1px!important;
+}
+
+.mid-divider{
+   margin-left:$content-margin * 2px!important;
+   width:calc(100% - (#{$content-margin} * 4px))!important;
+}
+
+
+
+
+
