--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
   <div class="content-container mission-card" fxLayout="column">
 
     <div fxFlex="10" fxLayout="row" fxLayoutAlign="space-between center">
-      <span class="content-header">Mest besøkte oppdrag denne måneden</span>
+      <span class="content-header">Sist besøkte oppdrag</span>
     </div>
 
     <div class="static-page-content" fxFlex="80">
