--- a/src/app/mission/components/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission/components/mission-note-list/mission-note-list.component.html
@@ -1,7 +1,7 @@
 
   <span *ngIf="notes.length == 0">Ingen notater</span>
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let note of notes; index as i; last as last" class="bg-2"
+    <mat-expansion-panel *ngFor="let note of notes; index as i; last as last"
       (opened)="loadDetails(note.id, i)" (closed)="closePanel()" [id]="note.id" #notePanel>
 
         <mat-expansion-panel-header>
@@ -27,7 +27,7 @@
           </span>
           <ng-container *ifRole="ROLES.Leder">
             <span class="w-100" fxLayout="row" fxLayoutAlign="end end" fxLayoutGap="10px">
-              <button (click)="openEditDialog(note.id)" mat-icon-button color="primary" aria-label="Rediger notat"><mat-icon>edit</mat-icon></button>
+              <button (click)="this.editNote.emit(note)" mat-icon-button color="primary" aria-label="Rediger notat"><mat-icon>edit</mat-icon></button>
               <button (click)="openDeleteDialog(note.id)" mat-icon-button color="warn" aria-label="Slett notat"><mat-icon>delete</mat-icon></button>
             </span>
           </ng-container>
