--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -5,7 +5,7 @@
     <div  fxFlex="10" class="content-header">
       <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
         <span>Brukere</span>
-        <button (click)="openCreateDialog()" color="primary" *ifRole="[ROLES.Leder]"
+        <button (click)="createUser()" color="primary" *ifRole="[ROLES.Leder]"
           mat-icon-button aria-label="ny">
           <mat-icon class="icon_125">person_add</mat-icon>
         </button>
@@ -19,7 +19,7 @@
       <mat-nav-list *ngIf="users" class="p-0">
         <app-nav-list-item
           *ngFor="let user of users; last as last" [last]="last"
-          (click)="(currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? openEditDialog(user) : ''"
+          (click)="(currentUser.role == ROLES.Leder && user.role != ROLES.Leder) ? editUser(user.userName) : ''"
           [config]="{
             mainLine: (user.firstName + ' ' + user.lastName),
             startIcon: 'person',
