Fix bug with forms, renamed submit eventemitter

--- a/src/app/employer/employer-form/employer-form.component.html
+++ b/src/app/employer/employer-form/employer-form.component.html
@@ -6,7 +6,7 @@
   (vertEvent)="handleVertEvent($event)">
 <app-employer-form-view
   [employer]="employer"
-  (submit)="onSubmit($event)">
+  (formSubmitted)="onSubmit($event)">
 </app-employer-form-view>
 
 
