--- a/src/app/mission/mission-form/mission-form.component.html
+++ b/src/app/mission/mission-form/mission-form.component.html
@@ -6,7 +6,7 @@
     [mission]="mission"
     [missionTypes]="missionTypes"
     [employers]="employers"
-    (submit)="onSubmit($event)">
+    (formSubmitted)="onSubmit($event)">
 </app-mission-form-view>
 
 
