--- a/src/app/mission/mission-note-form/mission-note-form.component.html
+++ b/src/app/mission/mission-note-form/mission-note-form.component.html
@@ -5,7 +5,7 @@
 <app-mission-note-form-view
     [note]="note"
     [missionId]="missionId"
-    (submit)="onSubmit($event)">
+    (formSubmitted)="onSubmit($event)">
 </app-mission-note-form-view>
 
 
