--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -6,7 +6,7 @@
   <app-user-form-view
   [user]="user"
   [roles]="roles"
-  (submit)="onSubmit($event)">
+  (formSubmitted)="onSubmit($event)">
   </app-user-form-view>
 
 
