--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,20 +120,6 @@ body {
   color:mat-color($background, "background");
 }
 
-.overlay{
-  position:fixed;
-  top:0;
-  height:100vh;
-  width:100vw;
-  background:rgba(0, 0, 0, .4);
-  z-index:100;
-}
-
-.auth-container{
-  background-color:mat-color($background,"app-bar");
-  height:100%;
-  color:mat-color($foreground, "base");
-}
 
 .bg-0{
   background-color:mat-color($background,"status-bar");
@@ -160,15 +146,6 @@ body {
   background-color:mat-color($background,"unselected-chip");
   color:mat-color($foreground, "base");
 }
-
-
-.bg-warn{
-  background-color:$warn;
-}
-.color-warn{
-  color:$warn;
-}
-
 
 .color-primary{
   color:$primary!important;
@@ -213,6 +190,9 @@ body {
    width:calc(100% - (#{$content-margin} * 4px))!important;
 }
 
+.center-spinner{
+  margin:$content-margin * 2px auto;
+}
 
 
 
